--- a/style/sheet.css
+++ b/style/sheet.css
@@ -30,14 +30,39 @@ main {
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
-    font-family: "Avenir Next", sans-serif;
+    font-family: "Open Sans", sans-serif;
     padding-top: 5rem;
- }
+}
 
- section {
-     width: 100%;
- }
+section {
+    width: 100%;
+}
 
- section img {
-     width: 100%;
- }
+section img {
+    width: 100%;
+}
+
+footer {
+    left: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+h1, h2 {
+    color: rgb(46, 81, 148);
+    font-size: 4rem;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h1 {
+    font-family: "Lora", serif;
+}
+
+h2 {
+    font-size: 2.5rem
+}
